--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/@enso-ui/documents#readme",
   "dependencies": {
-    "@enso-ui/card": "1.0.x",
-    "@enso-ui/confirmation": "1.0.x",
-    "@enso-ui/files": "1.3.x",
-    "@enso-ui/mixins": "1.1.x",
-    "@enso-ui/transitions": "1.0.x",
-    "@enso-ui/ui": "2.5.x",
-    "@enso-ui/uploader": "1.0.x",
+    "@enso-ui/card": "^2.0",
+    "@enso-ui/confirmation": "^1.0",
+    "@enso-ui/files": "^2.3",
+    "@enso-ui/mixins": "^1.1",
+    "@enso-ui/transitions": "^1.0",
+    "@enso-ui/ui": "^3.0",
+    "@enso-ui/uploader": "^1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/vue-fontawesome": "^0.1.1",
