--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@enso-ui/uploader": "^2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/vue-fontawesome": "3.0.0-5",
     "bulma": "^0.9.0",
     "lodash": "^4.17.10",
     "v-tooltip": "4.0.0-alpha.1",
