--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enso-ui/documents",
+  "name": "@cgdsoftware/documents",
   "version": "4.0.3",
   "description": "Documents",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/@enso-ui/documents.git"
+    "url": "git+https://github.com/@cgdsoftware/documents.git"
   },
   "keywords": [
     "documents",
@@ -18,17 +18,17 @@
   "author": "Adrian Ocneanu <aocneanu@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/@enso-ui/documents/issues"
+    "url": "https://github.com/@cgdsoftware/documents/issues"
   },
-  "homepage": "https://github.com/@enso-ui/documents#readme",
+  "homepage": "https://github.com/@cgdsoftware/documents#readme",
   "dependencies": {
-    "@enso-ui/card": "^3.0",
-    "@enso-ui/confirmation": "^2.0",
-    "@enso-ui/files": "^5.0",
-    "@enso-ui/mixins": "^4.0",
-    "@enso-ui/transitions": "^2.0",
-    "@enso-ui/ui": "^6.0",
-    "@enso-ui/uploader": "^2.0",
+    "@cgdsoftware/card": "^3.0",
+    "@cgdsoftware/confirmation": "^2.0",
+    "@cgdsoftware/files": "^5.0",
+    "@cgdsoftware/mixins": "^4.0",
+    "@cgdsoftware/transitions": "^2.0",
+    "@cgdsoftware/ui": "^6.0",
+    "@cgdsoftware/uploader": "^2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "3.0.0-5",
