--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@liberu-ui/documents",
   "version": "4.0.7",
   "description": "Documents",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
